Add overview for submitted sick notes beside waiting applications